<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">XBMC Remote</string>

	<string name="cancel">Cancel</string>
	<string name="cast">Cast</string>
	<string name="exit">Exit</string>
	<string name="fanart">Fanart</string>
	<string name="minutes_short">min</string>
	<string name="more">More</string>
	<string name="next">Next</string>
	<string name="ok">OK</string>
	<string name="password">Password</string>
	<string name="poster">Poster</string>
	<string name="play">Play</string>
	<string name="plot">Plot</string>
	<string name="prev">Previous</string>
	<string name="queue">Queue</string>
	<string name="retry">Retry</string>
	<string name="set">Set</string>
	<string name="setup">Setup</string>
	<string name="trailer">Trailer</string>
	<string name="username">Username</string>
	<string name="votes">Votes</string>

	<string name="empty_albums">No albums found.</string>
	<string name="empty_artists">No artists found.</string>
	<string name="empty_music_sources">No music sources found.</string>
	<string name="empty_movies">No movies found.</string>


	<string name="latest_albums">Latest Albums</string>
	<string name="recently_added">Recently Added</string>

	<string name="title_empty"></string>
	<string name="title_home">Home</string>
	<string name="title_music">Music</string>
	<string name="title_movies">Movies</string>

	<string name="description_search">Search</string>
	<string name="description_refresh">Refresh</string>

	<string name="menu_refresh">Refresh</string>
	<string name="menu_search">Search</string>
	<string name="menu_share">Share</string>

	<string name="tab_music_albums">Albums</string>
	<string name="tab_music_artists">Artists</string>
	<string name="tab_music_files">Files</string>

	<string name="button_see_more">SEE MORE</string>

	<string name="toast_syncing_all">Syncing all databases\u2026</string>
	<string name="toast_synced_all">All databases synced.</string>

	<string name="toast_sync_error">Sync error: <xliff:g id="error">%1$s</xliff:g></string>
	<string name="toast_music_db_updated">Music database updated.</string>

	<string name="host_no_host">No host set</string>
	<string name="host_choose_title">Switch XBMC</string>
	<string name="host_choose_p">Please choose the XBMC host you want to switch to below:</string>

	<string name="welcome_title">Welcome!</string>
	<string name="welcome_text">Let\'s get started by setting up your XBMC host. If your Android device is in the same network as XBMC, start the setup wizard below. Otherwise you can always come back later.</string>

	<string name="accountwizard_title">Host Setup</string>
	<string name="accountwizard_step1_title">Start XBMC.</string>
	<string name="accountwizard_step1_p1">I will search for XBMC hosts now. If you don\'t already have, please start XBMC now and make sure that your device is connected to the same network.</string>
	<string name="accountwizard_step1_p2">Once you\'re ready, click on <i>Next</i>.</string>
	<string name="accountwizard_step2a_title">Searching…</string>
	<string name="accountwizard_step2b_title">Nothing found.</string>
	<string name="accountwizard_step2b_p1">Unfortunately, I could not detect any XBMC instances in your network.</string>
	<string name="accountwizard_step2b_p2">Click <i>Next</i> for manual configuration or retry using the button below.</string>
	<string name="accountwizard_step2b_p3"><i>If you need help configuring XBMC, you will find some tips and tricks on the XBMC forum.</i></string>
	<string name="accountwizard_step3_already_added">A host with the same name is already added.</string>
	<string name="accountwizard_step3_empty_name">You must give a display name, that\'s how your XBMC host is identified.</string>
	<string name="accountwizard_step3_waiting_title">Connecting to %1$s…</string>
	<string name="accountwizard_step3_waiting_message">Accessing XBMC API on %1$s:%2$d</string>
	<string name="accountwizard_step3_login_title">Credentials Needed</string>
	<string name="accountwizard_step3_login_error">Wrong credentials. Please try again.</string>
	<string name="accountwizard_step3a_title">XBMC found.</string>
	<string name="accountwizard_step3a_p1">Please select the instance you want to set up below.</string>
	<string name="accountwizard_step3a_prev">Scan Again</string>
	<string name="accountwizard_step3a_manual">Manually Add</string>
	<string name="accountwizard_step3b_title">Manual Setup</string>
	<string name="accountwizard_step3b_p1">Please enter setup configuration manually below.</string>
	<string name="accountwizard_step3b_displayname">Display Name</string>
	<string name="accountwizard_step3b_host">IP Address</string>
	<string name="accountwizard_step3b_port">Port</string>
	<string name="accountwizard_step3b_prev">Scan Again</string>
	<string name="accountwizard_step3b_next">Test</string>
	<string name="accountwizard_step3b_message">Settings validated. Press <i>Next</i> to finish.</string>
	<string name="accountwizard_step4_title">All Done!</string>
	<string name="accountwizard_step4_p1">Setup completed. You can now use the Remote App with XBMC or setup additional options.</string>
	<string name="accountwizard_step4_prev">Add Another</string>
	<string name="accountwizard_step4_next">Exit</string>

	<string name="addaccount_username_label">Username</string>
	<string name="addaccount_password_label">Password</string>
	<string name="addaccount_next_button">Next</string>
	<string name="addaccount_prev_button">Previous</string>
	<string name="addaccount_close_button">Close</string>
	<string name="addaccount_manualadd_button">Manually Add</string>
	<string name="addaccount_scan_button">Rescan</string>
	<string name="addaccount_scanning">Scanning\u2026</string>
	<string name="addaccount_nothingfound">XBMC not found.</string>
	<string name="addaccount_scan_text">Scanning your network for XBMC hosts. Please make sure that XBMC is running and Zeroconf is enabled.</string>
	<string name="addaccount_authenticator_label">XBMC Host</string>
	<string name="addaccount_progress_checkingapiversion">Probing XBMC\u2026</string>


	<string name="ic_warning">\u0021</string>
	<string name="ic_volume_on">\u0022</string>
	<string name="ic_volume_muted">\u0023</string>
	<string name="ic_view_as_list">\u0024</string>
	<string name="ic_view_as_grid">\u0025</string>
	<string name="ic_stop">\u0026</string>
	<string name="ic_star_100">\u0027</string>
	<string name="ic_star_75">\u0028</string>
	<string name="ic_star_50">\u0029</string>
	<string name="ic_rewind">\u002a</string>
	<string name="ic_return_from_fullscreen">\u002b</string>
	<string name="ic_replay">\u002c</string>
	<string name="ic_repeat">\u002d</string>
	<string name="ic_remote">\u002e</string>
	<string name="ic_refresh">\u002f</string>
	<string name="ic_previous">\u0030</string>
	<string name="ic_prev_item">\u0031</string>
	<string name="ic_play_over_video">\u0032</string>
	<string name="ic_movie">\u0033</string>
	<string name="ic_logo">\u0034</string>
	<string name="ic_labels">\u0035</string>
	<string name="ic_keyboard">\u0036</string>
	<string name="ic_home">\u0037</string>
	<string name="ic_headphones">\u0038</string>
	<string name="ic_good">\u0039</string>
	<string name="ic_full_screen">\u003a</string>
	<string name="ic_forward">\u003b</string>
	<string name="ic_collapse">\u003c</string>
	<string name="ic_cast">\u003d</string>
	<string name="ic_cancel">\u003e</string>
	<string name="ic_back">\u003f</string>
	<string name="ic_addon">\u0040</string>
	<string name="ic_add_to_queue">\u0041</string>
	<string name="ic_actor">\u0042</string>
	<string name="ic_accept">\u0043</string>
	<string name="ic_bad">\u0044</string>
	<string name="ic_favorite">\u0045</string>
	<string name="ic_fast_forward">\u0046</string>
	<string name="ic_expand">\u0047</string>
	<string name="ic_error">\u0048</string>
	<string name="ic_download">\u0049</string>
	<string name="ic_dock">\u004a</string>
	<string name="ic_computer">\u004b</string>
	<string name="ic_collection">\u004c</string>
	<string name="ic_music">\u004d</string>
	<string name="ic_next">\u004e</string>
	<string name="ic_next_item">\u004f</string>
	<string name="ic_overflow">\u0050</string>
	<string name="ic_pause">\u0051</string>
	<string name="ic_pause_over_video">\u0052</string>
	<string name="ic_picture">\u0053</string>
	<string name="ic_play">\u0054</string>
	<string name="ic_search">\u0055</string>
	<string name="ic_settings">\u0056</string>
	<string name="ic_share">\u0057</string>
	<string name="ic_shuffle">\u0058</string>
	<string name="ic_slideshow">\u0059</string>
	<string name="ic_sort_by_size">\u005a</string>
	<string name="ic_star_00">\u005b</string>
	<string name="ic_star_25">\u005c</string>

	<string name="drawer_open">Open navigation drawer</string>
	<string name="drawer_close">Close navigation drawer</string>
	<string name="swipe_down_note">Swipe down to sync with XBMC.</string>

	<string name="youtube_error">There was an error initializing the Player (%1$s)</string>
</resources>
