<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@color/light_bg">

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="180dp"
			android:textColor="@color/light_tertiary_text"
			android:text="@string/ic_logo"
			android:id="@+id/logo"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:layout_marginTop="16dp"/>

	<TextView style="@style/WizardPageTitle" android:text="@string/welcome_title"
			  android:id="@+id/textView3"
			  android:layout_below="@+id/logo"
			  android:layout_alignParentRight="true"
			  android:layout_alignParentEnd="true"
			  android:layout_marginTop="16dp"
			  android:layout_marginLeft="16dp"
			  android:layout_marginRight="16dp"/>
	<TextView style="@style/Paragraph" android:text="@string/welcome_text"
			  android:id="@+id/textView2"
			  android:layout_below="@+id/textView3"
			  android:layout_marginLeft="16dp"
			  android:layout_marginRight="16dp"/>


	<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="?android:attr/listDivider"
			android:layout_above="@+id/linearLayout"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"/>

	<LinearLayout
			style="@style/ButtonBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_alignParentBottom="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:id="@+id/linearLayout">

		<Button
				android:id="@+id/exit_button"
				style="@style/ButtonBarButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/selectable_item_background"
				android:text="@string/exit" />

		<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:background="?android:attr/listDivider" />

		<Button
				android:id="@+id/setup_button"
				style="@style/ButtonBarButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/selectable_item_background"
				android:text="@string/setup" />
	</LinearLayout>


</RelativeLayout>