<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:background="@color/light_bg">

	<TextView
			style="@style/Paragraph"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/host_choose_p"
			android:id="@+id/p1"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:paddingLeft="16dp"
			android:paddingTop="16dp"
			android:paddingRight="16dp"/>

	<ListView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/p1"
			android:layout_alignParentLeft="true"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:paddingBottom="16dp"
			android:divider="@android:color/transparent"
			android:dividerHeight="16dp"/>

	<View
			android:id="@+id/divider"
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/light_tertiary_text"
			android:layout_below="@+id/list"
			android:layout_alignParentLeft="true"/>

	<LinearLayout
			style="@style/ButtonBar"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_below="@+id/divider"
			android:layout_alignParentLeft="true"
			android:id="@+id/linearLayout">

		<Button
				android:id="@+id/cancel"
				style="@style/ButtonBarButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/selectable_item_background"
				android:text="@string/cancel"/>

		<View
				android:layout_width="1dp"
				android:layout_height="match_parent"
				android:background="@color/light_tertiary_text"/>

		<Button
				android:id="@+id/ok"
				style="@style/ButtonBarButton"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:background="@drawable/selectable_item_background"
				android:text="@string/ok"/>

	</LinearLayout>

</LinearLayout>