<?xml version="1.0" encoding="utf-8"?>
<org.xbmc.android.app.ui.view.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	style="@style/Card"
	android:layout_width="@dimen/portrait_compact_width"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:id="@+id/thumb_wrapper"
		android:layout_width="@dimen/portrait_compact_width"
		android:layout_height="@dimen/portrait_compact_height">

		<ImageView
			android:id="@+id/poster"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			android:adjustViewBounds="true"
			android:scaleType="centerCrop"
			android:src="@drawable/gray"
			android:contentDescription="@string/poster" />

	</RelativeLayout>

	<TextView
		android:id="@+id/title"
		android:text="title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/thumb_wrapper"
		android:layout_marginTop="5dp"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="30dp"
		android:layout_alignParentLeft="true"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textColor="@color/light_primary_text"
		android:textSize="14sp"
		android:fontFamily="sans-serif-light"
		android:maxLines="2"
		android:ellipsize="end"
		android:lines="2"
		android:layout_toLeftOf="@+id/optionButton"
		tools:ignore="HardcodedText"/>

	<TextView
		android:id="@+id/genres"
		android:text="genres"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/title"
		android:layout_alignParentLeft="true"
		android:layout_marginLeft="5dp"
		android:layout_marginBottom="5dp"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="@color/light_secondry_text"
		android:textSize="14sp"
		android:fontFamily="sans-serif-light"
		android:maxLines="1"
		android:ellipsize="end"
		android:lines="1"
		android:longClickable="false"
		tools:ignore="HardcodedText"/>

	<!-- hover selector -->
	<RelativeLayout
			android:background="@drawable/bg_selectable"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:layout_marginBottom="2dp"/>

	<!-- overflow menu -->
	<ImageView
			android:id="@+id/overflow"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/thumb_wrapper"
			android:layout_alignParentRight="true"
			android:layout_alignParentEnd="true"
			android:paddingTop="4dp"
			android:paddingRight="4dp"
			android:text="@string/ic_overflow"
			android:contentDescription="@string/more"
			android:background="@android:color/transparent"
			android:cropToPadding="false" />

</org.xbmc.android.app.ui.view.CardView>